@@ -1,5 +1,5 @@
 all:
-	gcc -Wall -o main_menu.cgi main_menu.c cgi_init_term.c -lmysqlclient
+	gcc -Wall -o main_menu.cgi main_menu.c cgi_init_term.c cgi_mysql.c -lmysqlclient
 	gcc -Wall -o new_game.cgi new_game.c cgi_init_term.c cgi_parser.c cgi_mysql.c -lmysqlclient
 	sudo cp ../HTML/index.html /var/www/html/MP1/
 	sudo cp -r ../HTML/bootstrap-3.3.5-dist /var/www/html/MP1/
