@@ -10,8 +10,9 @@ char* parse_data(char *data, char *key, char *enctype);//
 void load(char** line, char** input);
 
 //SQL
-
-char *create_db(MYSQL *mysql, char *db_name, int flag);
+int cgi_mysql_check_db(char *db_name, int flag);
+int cgi_mysql_statement(char* db_name, char *statement, int flag);
+char *cgi_mysql_create_db(char *db_name, int flag);
 
 
 #endif
