@@ -3,3 +3,5 @@ cgi_mysql.c
 cgicustom.h
 main_menu.c
 new_game.c
+
+edit username and password in cgi_mysql.c
